--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.1.2",
+    "sass": "^1.38.0",
+    "sass-loader": "^12.1.0",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.0.0",
     "ts-loader": "^9.2.3",
