--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0"
   }
 }
