--- a/config/tsconfig/tsconfig.json
+++ b/config/tsconfig/tsconfig.json
@@ -5,14 +5,18 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "../../src",
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "jsx": "react",
+    "lib": ["dom", "es6"],
     "module": "es6",
     "moduleResolution": "node",
     "noEmit": true,
     "noImplicitAny": true,
     "outDir": "../../dist/",
     "removeComments": true,
+    "skipLibCheck": true,
     "sourceMap": true,
+    "strict": true,
     "target": "es6"
   },
   "include": ["../../src/**/*.ts"],
