--- a/config/jest/jest.config.json
+++ b/config/jest/jest.config.json
@@ -1,7 +1,7 @@
 {
   "globals": {
     "ts-jest": {
-      "tsConfig": "<rootDir>/config/tsconfig/tsconfig.json"
+      "tsconfig": "<rootDir>/config/tsconfig/tsconfig.json"
     }
   },
   "rootDir": "../../",
